# IMU-Mocap

./: .gitignore  LICENSE.md  README.md  WindowsInstaller.iss  imumocap.py  left_hand_model.json  model.json  pyproject.toml  right_hand_model.json  right_hand_model_new.json  setup.py  version.py
.github/workflows/: main.yml
Examples/: README.md  animate_body.py  animate_body_with_hands.py  animate_body_with_wheelchair.py  animate_body_with_wheelchair_and_hands.py  animate_left_hand.py  animate_model_file.json  animate_model_file.py  animate_right_hand.py  animate_upper_body.py  edit_pose.json  edit_pose.py  example_models.py  full_body.py  hand_generator.py  hardware.py  heading_test.py  left_hand.py  left_hand_model.json  left_hand_model_new.json  left_hand_single_finger_model.json  logged_lower_body.py  lower_body.py  model.json  models.py  playback_example.py  pose_frames.csv  record_example.py  reset_twintig_calibration.py  save_and_load.py  save_and_load_model.py  save_and_load_pose.py  set_north.py  simplest_model.py  stream_body.py  stream_lower_body.py  stream_model_file.json  stream_model_file.py  stream_upper_body.py  test_joint.py  (+7 more)
IMU Mocap Viewer/: IMU Mocap Viewer.slnx
IMU Mocap Viewer/Assets/: ChangeScene.cs
IMU Mocap Viewer/ProjectSettings/: EditorBuildSettings.asset  ProjectSettings.asset  TagManager.asset
imumocap/: __init__.py  float_to_str.py  joint.py  link.py  load.py  matrix.py  model.py  plot.py  pose.py  save.py  time_series.py  viewer.py
imumocap/file/: __init__.py  load.py  save.py
imumocap/solvers/: __init__.py  calibrate.py  (+5 more)
(+316 files in other folders)
